--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span> about natous</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span> about natours</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>your benefits</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>popular tours</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>stories</a></li>
@@ -40,7 +40,7 @@
                 <span class="heading-primary--main">outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
-            <a href="#section-tours" class="btn btn--white btn--animated">Discover out tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
 
@@ -48,7 +48,7 @@
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
-                    Exciting tours for adventurous pepople
+                    Exciting tours for adventurous people
                 </h2>
             </div>
 
@@ -64,7 +64,7 @@
                     </p>
 
                     <h3 class="heading-tertiary u-margin-bottom-small">
-                        Live adventure like you neve have before
+                        Live adventure like you never have before
                     </h3>
                     <p class="paragraph">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quae distinctio veniam eum,
@@ -159,7 +159,7 @@
                             <div class="card__details">
                                 <ul>
                                     <li>3 days tours</li>
-                                    <li>up to 30people</li>
+                                    <li>up to 30 people</li>
                                     <li>2 tour guides</li>
                                     <li>sleep in cozy hotels</li>
                                     <li>difficulty: easy</li>
@@ -191,7 +191,7 @@
                             <div class="card__details">
                                 <ul>
                                     <li>3 days tours</li>
-                                    <li>up to 30people</li>
+                                    <li>up to 30 people</li>
                                     <li>2 tour guides</li>
                                     <li>sleep in cozy hotels</li>
                                     <li>difficulty: easy</li>
@@ -223,7 +223,7 @@
                             <div class="card__details">
                                 <ul>
                                     <li>3 days tours</li>
-                                    <li>up to 30people</li>
+                                    <li>up to 30 people</li>
                                     <li>2 tour guides</li>
                                     <li>sleep in cozy hotels</li>
                                     <li>difficulty: easy</li>
@@ -295,7 +295,7 @@
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">
-                            Wow! My life is completly difrent now
+                            Wow! My life is completely different now
                         </h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt aperiam aut, minima error
@@ -375,7 +375,7 @@
                     <ul class="footer__list">
                         <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
                         <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-                        <li class="footer__item"><a href="#" class="footer__link">Carees</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Career</a></li>
                         <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
                         <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
                     </ul>
@@ -383,7 +383,7 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Build by <a href="#" class="footer__link">Hanna Trochimiuk</a> for his online course ADVANCED CSS
+                    Build by <a href="#" class="footer__link">Hanna Trochimiuk</a> for her online course ADVANCED CSS
                     AND SASS. Copyright © by Jonas Schmedtmann. You are 100% allowed to use this webpage for both
                     personal and commercial use, but NOT to claim it as your own design. A credit to the original
                     author, Jonas Schmedtmann, is of course highly appreciated!
